--- a/nextflow.config
+++ b/nextflow.config
@@ -1,6 +1,6 @@
 /*
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-    DOH-JDJ0303/corgisnps Nextflow config file
+    DOH-JDJ0303/CorgiSNPs Nextflow config file
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     Default config options for all compute environments
 ----------------------------------------------------------------------------------------
@@ -9,15 +9,92 @@
 // Global default params, used in configs
 params {
 
-    // TODO nf-core: Specify your pipeline's command line flags
-    // Input options
-    input                      = null
+    // -------------------------------
+    // Input / Output
+    // -------------------------------
+    input                      = null   // Path to input samplesheet or data directory
+    db                         = null   // Path to surviellance database
+    push                       = false  // Push outputs to database
+    microreact_template        = "$projectDir/assets/template.microreact" // Microreact template JSON for visualization
 
+
+    // -------------------------------
+    // Workflow Toggles
+    // -------------------------------
+    classify                   = true   // Enable/disable classification
+    variants                   = true   // Enable/disable variant calling
+    amr                        = true   // Enable/disable antimicrobial resistance (AMR) detection
+    phylo                      = true   // Enable/disable phylogenetic tree building
+
+    // -------------------------------
+    // Automated Quality Control
+    // -------------------------------
+    auto_qc                    = true   // Enable/disable automated quality control (performed prior to variant calling)
+    min_depth_qc               = 20     // Min. mean read depth across full genome
+    min_q30_rate_qc            = 0.8    // Min. Q30 rate post-read filtering
+    max_z_score_qc             = 2.58   // Max. Z-score for genome assembly size and % GC
+
+
+    // -------------------------------
+    // Assembly / Pre-Processing
+    // -------------------------------
+    assembler                  = "skesa"   // Assembler to use (e.g., skesa, shovill)
+    shovill_depth              = 30        // Target depth for shovill downsampling
+    genome_size                = 12500000  // Expected genome size (bp)
+    min_contig_cov             = 1         // Minimum contig coverage to retain
+    min_contig_len             = 300       // Minimum contig length to retain (bp)
+
+
+    // -------------------------------
+    // Databases
+    // -------------------------------
+    gambit_db                  = "$projectDir/assets/gambit_db/gambit-fungal-metadata-1.0.0-20241213.gdb" // Gambit fungal metadata DB
+    gambit_h5_dir              = "$projectDir/assets/gambit_db/signatures/"                               // Gambit signatures (HDF5 format)
+    subtype_db                 = "$projectDir/assets/subtyper/"                                           // Subtyping signatures (Sourmash DB)
+    reference_db               = "$projectDir/assets/reference_db/manifest.json"                          // Reference genome manifest JSON
+    snpeff_db                  = "$projectDir/assets/snpeff_db"                                           // SnpEff database for variant annotation
+    ncbi_stats                 = "$projectDir/assets/ncbi_stats/2025-09-24_NCBI_eukaryotes_stats.txt"     //
+
+
+    // -------------------------------
+    // Variant Calling Parameters
+    // -------------------------------
+    ploidy                     = 1     // Expected ploidy of the organism
+    max_reads                  = 10000000 // Max. reads to process (subsampling)
+    limit_coverage             = 100   // Max. allowed site coverage (to avoid bias)
+    min_base_depth             = 10    // Min. read depth per allele/site
+    min_base_quality           = 30    // Min. mean base quality (Phred) per allele/site
+    min_mapping_quality        = 40    // Min. mean mapping quality (Phred) per allele
+    min_allele_fraction        = 0.8   // Min. fraction of reads supporting an allele (haploid: 0.8, diploid/triploid: 0.25)
+    min_fwd_strand_fraction    = 0.3   // Min. forward-strand fraction for strand balance
+    max_strand_bias            = 15    // Max. strand bias score
+    max_read_pos_bias          = 20    // Max. read position bias score
+
+
+    // -------------------------------
+    // AMR Options
+    // -------------------------------
+    amr_genes                  = 'FKS1'   // List of AMR target genes
+
+
+    // -------------------------------
+    // Phylogenetic Parameters
+    // -------------------------------
+    min_genome_fraction        = 0.9   // Min. genome fraction for a sample to be included in the core analysis
+    min_core_fraction          = 0.9   // Min. population fraction for a site to be included in the core analysis
+    strong_link_threshold      = 5     // Threshold for defining strong links between samples
+    inter_link_threshold       = 10    // Threshold for defining intermediate links between samples
+    partition_distance         = 25    // Max. distance for partitioning clusters
+
+    // -------------------------------
+    // NF-Core Defaults
+    // -------------------------------
     // MultiQC options
     multiqc_config             = null
     multiqc_title              = null
     multiqc_logo               = null
     max_multiqc_email_size     = '25.MB'
+    multiqc_methods_description = null
 
     // Boilerplate options
     outdir                       = null
@@ -32,7 +109,7 @@ params {
     show_hidden                  = false
     version                      = false
     pipelines_testdata_base_path = 'https://raw.githubusercontent.com/nf-core/test-datasets/'
-    trace_report_suffix          = new java.util.Date().format( 'yyyy-MM-dd_HH-mm-ss')// Config options
+    trace_report_suffix          = new java.util.Date().format( 'yyyy-MM-dd_HH-mm-ss') // Config options
     config_profile_name        = null
     config_profile_description = null
 
@@ -166,13 +243,13 @@ profiles {
 // Load nf-core custom profiles from different institutions
 
 // If params.custom_config_base is set AND either the NXF_OFFLINE environment variable is not set or params.custom_config_base is a local path, the nfcore_custom.config file from the specified base path is included.
-// Load DOH-JDJ0303/corgisnps custom profiles from different institutions.
+// Load DOH-JDJ0303/CorgiSNPs custom profiles from different institutions.
 includeConfig params.custom_config_base && (!System.getenv('NXF_OFFLINE') || !params.custom_config_base.startsWith('http')) ? "${params.custom_config_base}/nfcore_custom.config" : "/dev/null"
 
 
-// Load DOH-JDJ0303/corgisnps custom profiles from different institutions.
+// Load DOH-JDJ0303/CorgiSNPs custom profiles from different institutions.
 // TODO nf-core: Optionally, you can add a pipeline-specific nf-core config at https://github.com/nf-core/configs
-// includeConfig params.custom_config_base && (!System.getenv('NXF_OFFLINE') || !params.custom_config_base.startsWith('http')) ? "${params.custom_config_base}/pipeline/corgisnps.config" : "/dev/null"
+// includeConfig params.custom_config_base && (!System.getenv('NXF_OFFLINE') || !params.custom_config_base.startsWith('http')) ? "${params.custom_config_base}/pipeline/CorgiSNPs.config" : "/dev/null"
 
 // Set default registry for Apptainer, Docker, Podman, Charliecloud and Singularity independent of -profile
 // Will not be used unless Apptainer / Docker / Podman / Charliecloud / Singularity are enabled
@@ -227,7 +304,7 @@ dag {
 }
 
 manifest {
-    name            = 'DOH-JDJ0303/corgisnps'
+    name            = 'DOH-JDJ0303/CorgiSNPs'
     contributors    = [
         // TODO nf-core: Update the field with the details of the contributors to your pipeline. New with Nextflow version 24.10.0
         [
@@ -239,8 +316,8 @@ manifest {
             orcid: ''
         ],
     ]
-    homePage        = 'https://github.com/DOH-JDJ0303/corgisnps'
-    description     = """Core genome analysis workflow for fungal pathogens"""
+    homePage        = 'https://github.com/DOH-JDJ0303/CorgiSNPs'
+    description     = """Fungal variant calling workflow."""
     mainScript      = 'main.nf'
     defaultBranch   = 'master'
     nextflowVersion = '!>=24.10.5'
@@ -258,7 +335,7 @@ validation {
     monochromeLogs = params.monochrome_logs
     help {
         enabled = true
-        command = "nextflow run DOH-JDJ0303/corgisnps -profile <docker/singularity/.../institute> --input samplesheet.csv --outdir <OUTDIR>"
+        command = "nextflow run DOH-JDJ0303/CorgiSNPs -profile <docker/singularity/.../institute> --input samplesheet.csv --outdir <OUTDIR>"
         fullParameter = "help_full"
         showHiddenParameter = "show_hidden"
     }
