--- a/nextflow.config
+++ b/nextflow.config
@@ -50,10 +50,10 @@ params {
     // -------------------------------
     gambit_db                  = "$projectDir/assets/gambit_db/gambit-fungal-metadata-1.0.0-20241213.gdb" // Gambit fungal metadata DB
     gambit_h5_dir              = "$projectDir/assets/gambit_db/signatures/"                               // Gambit signatures (HDF5 format)
-    subtype_db                 = "$projectDir/assets/subtyper/"                                           // Subtyping signatures (Sourmash DB)
+    subtype_db                 = "$projectDir/assets/subtyper_db/"                                        // Subtyping signatures (Sourmash DB)
     reference_db               = "$projectDir/assets/reference_db/manifest.json"                          // Reference genome manifest JSON
     snpeff_db                  = "$projectDir/assets/snpeff_db"                                           // SnpEff database for variant annotation
-    ncbi_stats                 = "$projectDir/assets/ncbi_stats/2025-09-24_NCBI_eukaryotes_stats.txt"     //
+    ncbi_stats                 = "$projectDir/assets/ncbi_stats/2025-10-03_NCBI_eukaryotes_stats.txt"     // Genome statistics for fungal species hosted on NCBI
 
 
     // -------------------------------
