--- a/nextflow.config
+++ b/nextflow.config
@@ -31,7 +31,7 @@ params {
     // -------------------------------
     auto_qc                    = true   // Enable/disable automated quality control (performed prior to variant calling)
     min_depth_qc               = 20     // Min. mean read depth across full genome
-    min_q30_rate_qc            = 0.8    // Min. Q30 rate post-read filtering
+    min_q30_rate_qc            = 0.8    // Min. read Q30 rate post filtering
     max_z_score_qc             = 2.58   // Max. Z-score for genome assembly size and % GC
 
 
@@ -74,7 +74,7 @@ params {
     // -------------------------------
     // AMR Options
     // -------------------------------
-    amr_genes                  = 'FKS1'   // List of AMR target genes
+    amr_genes                  = 'FKS1'   // Comma separated list of AMR target genes
 
 
     // -------------------------------
